--- a/otel/agent_node.yaml
+++ b/otel/agent_node.yaml
@@ -1,13 +1,35 @@
 apiVersion: opentelemetry.io/v1alpha1
 kind: OpenTelemetryCollector
 metadata:
-  name: observiq-otel-collector-metric-agent
+  name: observiq-node
   namespace: default
 spec:
   mode: daemonset
   hostNetwork: true
   config: |
     receivers:
+      filelog:
+        include:
+          - /var/log/containers/*.log
+        start_at: end
+        exclude:
+          # Avoid parsing collectors log to prevent re-parsing parser errors.
+          - /var/log/containers/observiq-otel-collector-log-agent-collector*
+          # Avoid parsing logging exporter from gateway.
+          - /var/log/containers/observiq-otel-collector-gateway-collector*
+        poll_interval: 500ms
+        resource:
+          k8s.node.name: "EXPR(env('K8S_NODE_NAME'))"
+          k8s.cluster.name: poc
+        operators:
+          # Parse the body into a json object
+          - type: json_parser
+          # Parse the filename into fields
+          - type: regex_parser
+            # NOTE: The trailing dollar sign is escaped with a second dollar sign
+            regex: '^(?P<pod_name>[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*)_(?P<namespace>[^_]+)_(?P<container_name>.+)-(?P<container_id>[a-z0-9]{64})\.log$$'
+            parse_from: $$attributes["file.name"]
+
       kubeletstats/node:
         auth_type: serviceAccount
         collection_interval: 60s
@@ -81,17 +103,23 @@ spec:
             to: node_name
 
       batch:
-        send_batch_max_size: 200
-        send_batch_size: 200
+        send_batch_max_size: 1000
+        send_batch_size: 1000
         timeout: 2s
 
     exporters:
       otlp:
-        endpoint: observiq-otel-collector-gateway:4317
+        endpoint: observiq-gcp-gateway:4317
         tls:
           insecure: true
 
+    extensions:
+      file_storage:
+        directory: /var/lib/observiq/otelcol/node
+
     service:
+      extensions:
+        - file_storage
       pipelines:
         metrics/node:
           receivers:
@@ -122,7 +150,14 @@ spec:
             - batch
           exporters:
             - otlp
-  
+        logs:
+          receivers:
+            - filelog
+          processors:
+            - batch
+          exporters:
+            - otlp
+
   image: observiq/observiq-otel-collector:v0.4.1
   serviceAccount: observiq-otel-collector
   resources:
@@ -132,6 +167,24 @@ spec:
     requests:
       memory: "50Mi"
       cpu: 50m
+  volumes:
+    - name: varlog
+      hostPath:
+        path: /var/log
+    - name: dockerlogs
+      hostPath:
+        path: /var/lib/docker/containers
+    - name: storage
+      hostPath:
+        path: /var/lib/observiq/otelcol/node
+  volumeMounts:
+    - mountPath: /var/log
+      name: varlog
+    - mountPath: /var/lib/docker/containers
+      name: dockerlogs
+    - mountPath: /var/lib/observiq/otelcol/node
+      name: storage
+      readOnly: false
   env:
     - name: K8S_NODE_NAME
       valueFrom:
