--- a/.github/actions/minikube/action.yml
+++ b/.github/actions/minikube/action.yml
@@ -13,5 +13,5 @@ runs:
   using: "composite"
   steps:
     - id: test-plugin
-      run: ${{ github.action_path }}/test-plugin.sh use_time }}" "${{ inputs.k8s_version }}" "${{ inputs.k8s_runtime }}"
+      run: "${{ github.action_path }}/test-plugin.sh use_time }} ${{ inputs.k8s_version }} ${{ inputs.k8s_runtime }}"
       shell: bash
