--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,47 +31,47 @@ jobs:
         k8s_version: ${{ matrix.k8s-version }}
         k8s_runtime: ${{ matrix.format }}
 
-    - id: Install Cert Manager
+    - name: Install Cert Manager
       run: kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.8.0/cert-manager.yaml
 
-    - id: Wait For Cert Manager
+    - name: Wait For Cert Manager
       run: |
         kubectl rollout status deployment.apps/cert-manager --timeout=60s
         kubectl rollout status deployment.apps/cert-manager-cainjector --timeout=10s
         kubectl rollout status deployment.apps/cert-manager-webhook --timeout=10s
 
-    - id: Install OpenTelemetry Operator
+    - name: Install OpenTelemetry Operator
       run: kubectl apply -f https://github.com/open-telemetry/opentelemetry-operator/releases/latest/download/opentelemetry-operator.yaml
 
-    - id: Wait For OpenTelemetry Operator
+    - name: Wait For OpenTelemetry Operator
       run: kubectl rollout status deployment.apps/opentelemetry-operator-controller-manager --timeout=60s
 
     # We just need a secret that can be mounted, sending telemetry to
     # GCP is not the goal.
-    - id: Create Fake GCP Credentials
+    - name: Create Fake GCP Credentials
       run: kubectl create secret generic gcp-credentials --from-literal=ci=true -n default
 
-    - id: Install Kustomize
+    - name: Install Kustomize
       run: curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
       shell: bash
 
-    - id: Kustomize Output
+    - name: Kustomize Output
       run: kustomize build environments/minikube
 
-    - id: Kustomize Deploy
+    - name: Kustomize Deploy
       run: kustomize build environments/minikube | kubectl apply -f -
 
-    - id: Wait For GCP Gateway Collector
+    - name: Wait For GCP Gateway Collector
       run: kubectl rollout status statefulset.apps/observiq-gcp-gateway-collector --timeout=60s
 
-    - id: Wait For Cluster Collector
+    - name: Wait For Cluster Collector
       run: kubectl rollout status statefulset.apps/observiq-cluster-collector --timeout=60s
 
-    - id: Wait For Node Collector
+    - name: Wait For Node Collector
       run: kubectl rollout status daemonset.apps/observiq-node-collector --timeout=60s
 
-    - id: Deploy Redis w/ Side Car Collector
+    - name: Deploy Redis w/ Side Car Collector
       run: kubectl apply -f app/redis/redis.yaml
 
-    - id: Wait For Redis w/ Side Car Collector
+    - name: Wait For Redis w/ Side Car Collector
       run: kubectl rollout status deployment.apps/redis --timeout=60s
