--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,15 +32,15 @@ jobs:
 
     - name: Wait For Cert Manager
       run: |
-        kubectl rollout status deployment.apps/cert-manager --timeout=60s
-        kubectl rollout status deployment.apps/cert-manager-cainjector --timeout=10s
-        kubectl rollout status deployment.apps/cert-manager-webhook --timeout=10s
+        kubectl rollout status deployment.apps/cert-manager --timeout=60s -n cert-manager
+        kubectl rollout status deployment.apps/cert-manager-cainjector --timeout=10s -n cert-manager
+        kubectl rollout status deployment.apps/cert-manager-webhook --timeout=10s -n cert-manager
 
     - name: Install OpenTelemetry Operator
       run: kubectl apply -f https://github.com/open-telemetry/opentelemetry-operator/releases/latest/download/opentelemetry-operator.yaml
 
     - name: Wait For OpenTelemetry Operator
-      run: kubectl rollout status deployment.apps/opentelemetry-operator-controller-manager --timeout=60s
+      run: kubectl rollout status deployment.apps/opentelemetry-operator-controller-manager --timeout=60s -n opentelemetry-operator-system
 
     # We just need a secret that can be mounted, sending telemetry to
     # GCP is not the goal.
