--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,19 +28,10 @@ jobs:
         k8s_runtime: ${{ matrix.format }}
 
     - name: Install Cert Manager
-      run: kubectl apply -f https://github.com/cert-manager/cert-manager/releases/download/v1.8.0/cert-manager.yaml
-
-    - name: Wait For Cert Manager
-      run: |
-        kubectl rollout status deployment.apps/cert-manager --timeout=60s -n cert-manager
-        kubectl rollout status deployment.apps/cert-manager-cainjector --timeout=60s -n cert-manager
-        kubectl rollout status deployment.apps/cert-manager-webhook --timeout=60s -n cert-manager
+      uses: ./.github/actions/certmanager
 
     - name: Install OpenTelemetry Operator
-      run: kubectl apply -f https://github.com/open-telemetry/opentelemetry-operator/releases/latest/download/opentelemetry-operator.yaml
-
-    - name: Wait For OpenTelemetry Operator
-      run: kubectl rollout status deployment.apps/opentelemetry-operator-controller-manager --timeout=60s -n opentelemetry-operator-system
+      uses: ./.github/actions/opentelmetryoperator
 
     # We just need a secret that can be mounted, sending telemetry to
     # GCP is not the goal.
