Remove format matrix, only use containerd

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,9 +15,6 @@ jobs:
           - "v1.22.0"
           - "v1.21.0"
           - "v1.20.0"
-        format:
-          - "docker"
-          - "containerd"
 
     steps:
     - uses: actions/checkout@v2
@@ -26,7 +23,7 @@ jobs:
       uses: ./.github/actions/minikube
       with:
         k8s_version: ${{ matrix.k8s-version }}
-        k8s_runtime: ${{ matrix.format }}
+        k8s_runtime: containerd
 
     - name: Install Cert Manager
       uses: ./.github/actions/certmanager
