--- a/environments/ci/agent_gcp_gateway.yaml
+++ b/environments/ci/agent_gcp_gateway.yaml
@@ -1,13 +1,12 @@
 apiVersion: opentelemetry.io/v1alpha1
 kind: OpenTelemetryCollector
 metadata:
-  name: observiq-redis
+  name: observiq-gcp-gateway
   namespace: default
 spec:
   resources:
-    limits:
-      memory: 80Mi
-      cpu: 50m
     requests:
       memory: 50Mi
       cpu: 10m
+  replicas: 1
+  maxReplicas: 1
