--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,64 +5,23 @@ on:
     branches:
       - main
 jobs:
-  test:
+  validation:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        k8s-version:
-          - "v1.21.0"
-
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Install Minikube
-      uses: ./.github/actions/minikube
-      with:
-        k8s_version: ${{ matrix.k8s-version }}
-        k8s_runtime: containerd
+      - name: Install Kustomize
+        run: curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh" | bash
 
-    - name: Install Cert Manager
-      uses: ./.github/actions/certmanager
+      - name: Install Kubeval
+        run: |
+          wget https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz
+          tar xf kubeval-linux-amd64.tar.gz
+          sudo cp kubeval /usr/local/bin
 
-    - name: Install OpenTelemetry Operator
-      uses: ./.github/actions/opentelemetryoperator
+      - name: Render
+        run: kustomize build environments/generic > generic.yaml
 
-    # We just need a secret that can be mounted, sending telemetry to
-    # GCP is not the goal.
-    - name: Create Fake GCP Credentials
-      run: kubectl create secret generic gcp-credentials --from-literal=ci=true -n default
+      - name: Validate
+        run: kubeval generic.yaml --ignore-missing-schemas
 
-    - name: Install Kustomize
-      run: curl -s "https://raw.githubusercontent.com/kubernetes-sigs/kustomize/master/hack/install_kustomize.sh"  | bash
-      shell: bash
-
-    - name: Kustomize Output
-      run: kustomize build environments/ci
-
-    # Deploy and sleep a few seconds to avoid `kubectl rollout` failing with "not found".
-    - name: Kustomize Deploy
-      run: |
-        kustomize build environments/ci | kubectl apply -f -
-        sleep 3
-
-    - name: Wait For GCP Gateway Collector
-      run: kubectl rollout status deployment.apps/observiq-gcp-gateway-collector --timeout=120s
-
-    - name: Wait For Cluster Collector
-      run: kubectl rollout status statefulset.apps/observiq-cluster-collector --timeout=120s
-
-    - name: Wait For Node Collector
-      run: kubectl rollout status daemonset.apps/observiq-node-collector --timeout=120s
-
-    - name: Deploy Redis w/ Side Car Collector
-      run: kubectl apply -f app/redis/redis.yaml
-
-    - name: Wait For Redis w/ Side Car Collector
-      run: kubectl rollout status deployment.apps/redis --timeout=120s
-
-    - name: Dump Failure Output
-      if: ${{ failure() }}
-      run: |
-        kubectl get pods --all-namespaces
-        kubectl get events --all-namespaces
