--- a/base/agent_node.yaml
+++ b/base/agent_node.yaml
@@ -109,7 +109,7 @@ spec:
 
     exporters:
       otlp:
-        endpoint: observiq-gcp-gateway:4317
+        endpoint: observiq-gateway:4317
         tls:
           insecure: true
 
