--- a/base/agent_redis.yaml
+++ b/base/agent_redis.yaml
@@ -45,7 +45,7 @@ spec:
 
     exporters:
       otlp:
-        endpoint: observiq-gcp-gateway:4317
+        endpoint: observiq-gateway:4317
         tls:
           insecure: true
 
