--- a/base/exporters/googlecloud/agent_gateway.yaml
+++ b/base/exporters/googlecloud/agent_gateway.yaml
@@ -27,13 +27,6 @@ spec:
   mode: deployment
   config: |
     receivers:
-      prometheus/collector:
-        config:
-          scrape_configs:
-            - job_name: 'observiq-otel-collector'
-              scrape_interval: 60s
-              static_configs:
-                - targets: ['127.0.0.1:8888']
       otlp:
         protocols:
           grpc:
@@ -47,29 +40,11 @@ spec:
         timeout: 2s
         override: false
 
-      # Resource attributes will be used to map the metrics
-      # to Google Monitored Resource type 'k8s_node'
-      # https://cloud.google.com/logging/docs/api/v2/resource-list#resource-types
-      resource/collector:
-        attributes:
-        - key: k8s.namespace.name
-          value: "${K8S_NAMESPACE}"
-          action: insert
-        - key: k8s.pod.name
-          value: "${K8S_POD_NAME}"
-          action: insert
-        - key: k8s.node.name
-          value: "${K8S_NODE_NAME}"
-          action: insert
-
-      # Google requires k8s.cluster.name, cloud.region, cloud.availability_zone and
-      # cloud.platform in order to map to container, pod, node, and cluster resource types.
+      # Google requires cloud.region, cloud.availability_zone and cloud.platform
+      # in order to map to container, pod, node, and cluster resource types.
       # These values are only set if not already present.
       resource/all:
         attributes:
-        - key: k8s.cluster.name
-          value: "${K8S_CLUSTER}"
-          action: insert
         - key: cloud.region
           value: us-east1
           action: insert
@@ -107,19 +82,6 @@ spec:
       extensions:
         - health_check
       pipelines:
-        # Pipeline for collectors own metrics
-        #
-        # TODO(jsirianni): Does not work with gcp, gives duplicate label key error.
-        # metrics/collector:
-        #   #receivers:
-        #   #  - prometheus/collector
-        #   processors:
-        #     - resourcedetection
-        #     - resource/collector
-        #     - resource/all
-        #   exporters:
-        #     - logging
-        #     - googlecloud
         # Pipeline for ingested metrics
         #
         metrics/ingest:
@@ -161,16 +123,3 @@ spec:
   env:
     - name: GOOGLE_APPLICATION_CREDENTIALS
       value: /otel/credentials.json
-    - name: K8S_NODE_NAME
-      valueFrom:
-        fieldRef:
-          fieldPath: spec.nodeName
-    - name: K8S_NAMESPACE
-      valueFrom:
-        fieldRef:
-          fieldPath: metadata.namespace
-    - name: K8S_POD_NAME
-      valueFrom:
-        fieldRef:
-          fieldPath: metadata.name
-
